--- a/my-image-uploader/styles/Home.module.scss
+++ b/my-image-uploader/styles/Home.module.scss
@@ -2,7 +2,6 @@
   display: grid;
   grid-template-rows: 1fr auto;
   max-width: 80rem;
-  min-height: 100vh;
   padding: 0 2rem;
   margin: 0 auto;
 }
@@ -29,34 +28,23 @@
 }
 
 .form {
-
-  [type="file"] {
+  [type='file'] {
     font-size: 1em;
     padding: 1em;
     border: solid 1px gray;
-    border-radius: .5em;
+    border-radius: 0.5em;
   }
 
   button {
     color: white;
     font-size: 1em;
     background-color: blueviolet;
-    padding: .5em .8em;
+    padding: 0.5em 0.8em;
     border: none;
-    border-radius: .2em;
+    border-radius: 0.2em;
   }
 
   code {
     text-align: left;
   }
-
-}
-
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
 }
